--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "email": "email dev --dir src/components/email"
   },
   "dependencies": {
-    "@putiikkipalvelu/storefront-sdk": "file:../../verkkokauppapalvelu/packages/sdk/putiikkipalvelu-storefront-sdk-0.1.0.tgz",
     "@conform-to/react": "^1.2.2",
     "@conform-to/zod": "^1.2.2",
     "@hookform/resolvers": "^3.9.1",
+    "@putiikkipalvelu/storefront-sdk": "file:../putiikkipalvelu-sdk",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
